--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>Unfold - Personal Portfolio & CV Template</title>
+    <title>Parth Panchal - My Resume</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/banner/logo.png" type="image/png">
