Added Share-Space project

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">Parth Panchal</h1>
-                            <p>A Cross Platform App Developer. <br>Prefer Tea over Coffee 😜 .<br> I love to play around
+                            <p>A Cross Platform App Developer. <br>Prefer's Tea over Coffee 😜 .<br> I love to play
+                                around
                                 with
                                 technology . <br>I also do 📸 photography . </p>
                             <a class="main-btn" href="#work">View my Work</a>
@@ -261,7 +262,7 @@
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="60"></div>
+                                    <div class="bar progress-line" data-width="70"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
@@ -277,7 +278,7 @@
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="50"></div>
+                                    <div class="bar progress-line" data-width="80"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
@@ -293,7 +294,7 @@
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="90"></div>
+                                    <div class="bar progress-line" data-width="80"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
@@ -366,6 +367,25 @@
             </div> <!-- row -->
 
             <div class="row">
+                <div class="card mb-3" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="assets/images/SHARE SPACE.png" alt="Italian Trulli">
+
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Share-Space"
+                                        style="color: #764ef9;">Share Space</a></h5>
+                                <p class="card-text">Share Space is a social app where you and your friends can suggest
+                                    some interesting things to do in this quarantine like watching some film/series or
+                                    reading an interesting book, listening to some good music or any other interesting
+                                    activity .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="card mb-3" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
