--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta https-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -147,14 +147,14 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="https://github.com/parthpanchal123"><i
+                                    <li><a href="httpss://github.com/parthpanchal123"><i
                                                 class='lni lni-github-original'></i></a></li>
-                                    <li><a href="https://twitter.com/im_parth_24"><i
+                                    <li><a href="httpss://twitter.com/im_parth_24"><i
                                                 class="lni-twitter-original"></i></a></li>
-                                    <li><a href="https://www.instagram.com/im_parth24/"><i
+                                    <li><a href="httpss://www.instagram.com/im_parth24/"><i
                                                 class='lni lni-instagram-filled'></i></a></li>
 
-                                    <li><a href="https://www.linkedin.com/in/parthpanchal123/"><i
+                                    <li><a href="httpss://www.linkedin.com/in/parthpanchal123/"><i
                                                 class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div> <!-- header social -->
@@ -340,7 +340,7 @@
                             Contact me and we can together turn that into reality ! </p>
                         <ul>
                             <li><a class="main-btn custom"
-                                    href="https://docs.google.com/document/d/1qgB_kmLgTT_7yQs0lrGfiLOSgCnlykra9xknK7w_7dU/edit?usp=sharing">My
+                                    href="httpss://docs.google.com/document/d/1qgB_kmLgTT_7yQs0lrGfiLOSgCnlykra9xknK7w_7dU/edit?usp=sharing">My
                                     CV</a></li>
                             <li><a class="main-btn custom-2" href="#contact">hire me</a></li>
                         </ul>
@@ -375,7 +375,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Share-Space"
+                                <h5 class="card-title"><a href="httpss://github.com/parthpanchal123/Share-Space"
                                         style="color: #764ef9;">Share Space</a></h5>
                                 <p class="card-text">Share Space is a social app where you and your friends can suggest
                                     some interesting things to do in this quarantine like watching some film/series or
@@ -394,7 +394,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Hike-it-Up"
+                                <h5 class="card-title"><a href="httpss://github.com/parthpanchal123/Hike-it-Up"
                                         style="color: #764ef9;">Hike-It Up !</a></h5>
                                 <p class="card-text">Hike-it Up is a simple application that allows you to share your
                                     location with your friends or family for a particular duration of time.</p>
@@ -411,7 +411,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Corona-Stats"
+                                <h5 class="card-title"><a href="httpss://github.com/parthpanchal123/Corona-Stats"
                                         style="color: #764ef9;">Corona-Stats Tracker</a></h5>
                                 <p class="card-text">A simple app that displays corona-statistics from all over the
                                     world .</p>
@@ -428,7 +428,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Cu-urls"
+                                <h5 class="card-title"><a href="httpss://github.com/parthpanchal123/Cu-urls"
                                         style="color: #764ef9;">Cu-urls</a></h5>
                                 <p class="card-text">Want to quickly send any of your personal information like your
                                     number,email,github profile link or any other link , Cu-urls is the quick way.
@@ -447,7 +447,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="work-more text-center mt-50">
-                        <a class="main-btn" href="https://github.com/parthpanchal123">More on Github</a>
+                        <a class="main-btn" href="httpss://github.com/parthpanchal123">More on Github</a>
                     </div> <!-- work more -->
                 </div>
             </div> <!-- row -->
@@ -539,13 +539,13 @@
                             </a>
                             <p class="mt-">Thankyou For Stopping by . You can contact me on the below handles .</p>
                             <ul>
-                                <li><a href="https://github.com/parthpanchal123"><i
+                                <li><a href="httpss://github.com/parthpanchal123"><i
                                             class='lni lni-github-original'></i></a></li>
-                                <li><a href=" https://twitter.com/im_parth_24"><i class="lni-twitter-original"></i></a>
+                                <li><a href=" httpss://twitter.com/im_parth_24"><i class="lni-twitter-original"></i></a>
                                 </li>
-                                <li><a href="https://www.instagram.com/im_parth24/"><i
+                                <li><a href="httpss://www.instagram.com/im_parth24/"><i
                                             class='lni lni-instagram-filled'></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/parthpanchal123/"><i
+                                <li><a href="httpss://www.linkedin.com/in/parthpanchal123/"><i
                                             class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
