Updated Projects ,cover Image , icons etc

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>Parth Panchal - My Resume</title>
+    <title>Parth Panchal - My Portfolio</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/banner/logo.png" type="image/png">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!--====== Line Icons css ======-->
-    <link rel="stylesheet" href="assets/css/LineIcons.css">
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
 
     <!--====== Magnific Popup css ======-->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -80,7 +80,7 @@
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item active"><a class="page-scroll" href="#home">Home</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-                                    <li class="nav-item"><a class="page-scroll" href="#work">Portfolio</a></li>
+                                    <li class="nav-item"><a class="page-scroll" href="#work">Projects</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -125,18 +125,23 @@
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
-                            <h4 class="sub-title">Hello, I’m</h4>
-                            <h1 class="title">Parth Panchal</h1>
-                            <p>A Cross Platform App Developer. <br>Prefer's Tea over Coffee 😜 .<br> I love to play
+                            <h4 class="sub-title">Hello 👋, I’m</h4>
+                            <h1 class="h1" style="font-weight: 700">Parth Panchal</h1>
+                            <p><b>MERN </b>stack Web Developer 🌐<br><b>Flutter</b> App Developer 📱<br>Prefer's Tea
+                                over
+                                Coffee 😜
+                                .<br> I
+                                love to play
                                 around
                                 with
-                                technology . <br>I also do 📸 photography . </p>
+                                technology 👨‍💻 <br>I also do photography 📸 </p>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
-                    <div class="col-lg-6 offset-xl-1">
-                        <div class="header-image d-none d-lg-block">
-                            <img src="assets/images/my_cropped_pic.png" alt="hero">
+                    <div class="col-lg-6 offset-xl-1 ">
+                        <div class="d-none d-lg-block">
+                            <img class="animate" src="assets/images/me.png" alt="hero"
+                                style="height : 80% ; width : 80%">
                         </div> <!-- header image -->
                     </div>
                 </div> <!-- row -->
@@ -148,14 +153,23 @@
                             <div class="header-social-icon">
                                 <ul>
                                     <li><a href="https://github.com/parthpanchal123"><i
-                                                class='lni lni-github-original'></i></a></li>
+                                                class='lni lni-github-original'></i></a>
+                                    </li>
+                                    <li><a href="https://parthpanchal53.medium.com/"><i class="lni lni-medium"></i></a>
+                                    </li>
                                     <li><a href="https://twitter.com/im_parth_24"><i
-                                                class="lni-twitter-original"></i></a></li>
-                                    <li><a href="https://www.instagram.com/im_parth24/"><i
-                                                class='lni lni-instagram-filled'></i></a></li>
+                                                class="lni lni-twitter-original"></i></a>
+                                    </li>
 
                                     <li><a href="https://www.linkedin.com/in/parthpanchal123/"><i
-                                                class="lni-linkedin-original"></i></a></li>
+                                                class="lni lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://dev.to/parthpanchal123">
+                                            <i class="lni lni-dev"></i>
+                                        </a></li>
+
+                                    <li><a href="https://www.instagram.com/im_parth24/"><i
+                                                class='lni lni-instagram-original '></i></a></li>
+
                                 </ul>
                             </div> <!-- header social -->
                         </div>
@@ -191,7 +205,7 @@
                             <li>
                                 <div class="single-info d-flex align-items-center">
                                     <div class="info-icon">
-                                        <i class="lni-calendar"></i>
+                                        <i class="lni lni-calendar"></i>
                                     </div>
                                     <div class="info-text">
                                         <p>24 Oct 2000</p>
@@ -201,7 +215,7 @@
                             <li>
                                 <div class="single-info d-flex align-items-center">
                                     <div class="info-icon">
-                                        <i class="lni-envelope"></i>
+                                        <i class="lni lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
                                         <p><a href="mailto:parthpanchal53@gmail.com"
@@ -212,17 +226,17 @@
                             <li>
                                 <div class="single-info d-flex align-items-center">
                                     <div class="info-icon">
-                                        <i class="lni-phone-handset"></i>
+                                        <i class="lni lni-phone"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p>+91-9702949555</p>
+                                        <p>+91-8169309113</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
                             <li>
                                 <div class="single-info d-flex align-items-center">
                                     <div class="info-icon">
-                                        <i class="lni-map-marker"></i>
+                                        <i class="lni lni-map-marker"></i>
                                     </div>
                                     <div class="info-text">
                                         <p>Mira road, Mumbai, India</p>
@@ -232,8 +246,8 @@
                         </ul>
                     </div> <!-- about content -->
                 </div>
-                <div class="col-xl-5 offset-xl-1 col-lg-6">
-                    <div class="about-skills pt-25">
+                <div class="col-xl-5 offset-xl-1 col-lg-6 animate">
+                    <div class="about-skills pt-25 ">
                         <div class="skill-item mt-25">
                             <div class="skill-header">
                                 <h6 class="skill-title">Flutter</h6>
@@ -359,7 +373,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
-                        <h2 class="title">My Recent Works</h2>
+                        <h2 class="title">My Recent Projects</h2>
                         <p>I keep all of my work updated on Github . Below are some of my latest works , you can head
                             over to my Github for source-code and more.</p>
                     </div> <!-- section title -->
@@ -367,10 +381,28 @@
             </div> <!-- row -->
 
             <div class="row">
-                <div class="card mb-3" style="max-width: 1000px;">
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="assets/images/SHARE SPACE.png" alt="Italian Trulli">
+                            <img src="assets/images/work/code-snipps1.png" alt="Code-snipps">
+
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="https://code-snipps.netlify.app"
+                                        style="color: #764ef9;">Code-snipps</a></h5>
+                                <p class="card-text">Code-snipps is a MERN stack web app that lets developers share cool
+                                    code
+                                    snippets with all other fellow developers.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="assets/images/SHARE SPACE.png" alt="Share-space">
 
                         </div>
                         <div class="col-md-8">
@@ -386,10 +418,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 1000px;">
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="./assets/images/work/Hike_proj.png" alt="Italian Trulli">
+                            <img src="./assets/images/work/Hike_proj.png" alt="Hike-it Up">
 
                         </div>
                         <div class="col-md-8">
@@ -403,27 +435,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 1000px;">
+
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="./assets/images/work/corona_proj.png" alt="Italian Trulli">
-
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Corona-Stats"
-                                        style="color: #764ef9;">Corona-Stats Tracker</a></h5>
-                                <p class="card-text">A simple app that displays corona-statistics from all over the
-                                    world .</p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card mb-3" style="max-width: 1000px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="./assets/images/work/Cu-urls.png" alt="Italian Trulli">
+                            <img src="./assets/images/work/Cu-urls.png" alt="Cu-urls">
 
                         </div>
                         <div class="col-md-8">
@@ -434,6 +450,23 @@
                                     number,email,github profile link or any other link , Cu-urls is the quick way.
 
                                 </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="./assets/images/work/corona_proj.png" alt="Corona-stats">
+
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="https://github.com/parthpanchal123/Corona-Stats"
+                                        style="color: #764ef9;">Corona-Stats Tracker</a></h5>
+                                <p class="card-text">A simple app that displays corona-statistics from all over the
+                                    world .</p>
 
                             </div>
                         </div>
@@ -480,9 +513,9 @@
             </div> <!-- row -->
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-7">
-                    <div class="contact-box text-center mt-30">
+                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded animate">
                         <div class="contact-icon">
-                            <i class="lni-map-marker"></i>
+                            <i class="lni lni-map"></i>
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Address</h6>
@@ -490,22 +523,21 @@
                         </div>
                     </div> <!-- contact box -->
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-7">
-                    <div class="contact-box text-center mt-30">
+                <div class="col-lg-4 col-md-6 col-sm-7 animate">
+                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded">
                         <div class="contact-icon">
-                            <i class="lni-phone"></i>
+                            <i class="lni lni-phone"></i>
                         </div>
-                        <div class="contact-content">
+                        <div class="contact-content pb-25">
                             <h6 class="contact-title">Phone</h6>
-                            <p>+91 9702949555</p>
                             <p>+91 8169309113</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-7">
-                    <div class="contact-box text-center mt-30">
+                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded animate">
                         <div class="contact-icon">
-                            <i class="lni-envelope"></i>
+                            <i class="lni lni-envelope"></i>
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Email</h6>
@@ -526,7 +558,7 @@
     <!--====== FOOTER PART START ======-->
 
     <footer id="footer" class="footer-area">
-        <div class="footer-widget pt-130 pb-130">
+        <div class="footer-widget pt-65 pb-65">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -541,12 +573,15 @@
                             <ul>
                                 <li><a href="https://github.com/parthpanchal123"><i
                                             class='lni lni-github-original'></i></a></li>
-                                <li><a href=" https://twitter.com/im_parth_24"><i class="lni-twitter-original"></i></a>
+                                <li><a href=" https://twitter.com/im_parth_24"><i
+                                            class="lni lni-twitter-original"></i></a>
                                 </li>
-                                <li><a href="https://www.instagram.com/im_parth24/"><i
-                                            class='lni lni-instagram-filled'></i></a></li>
+                                <li><a href="https://parthpanchal53.medium.com/"><i class="lni lni-medium"></i></a>
+                                </li>
+                                <li><a href="https://dev.to/parthpanchal123">
+                                        <i class="lni lni-dev"></i>
                                 <li><a href="https://www.linkedin.com/in/parthpanchal123/"><i
-                                            class="lni-linkedin-original"></i></a></li>
+                                            class="lni lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
                     </div>
@@ -559,7 +594,7 @@
 
     <!--====== BACK TOP TOP PART START ======-->
 
-    <a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
+    <a href="#" class="back-to-top"><i class="lni lni-chevron-up"></i></a>
 
     <!--====== BACK TOP TOP PART ENDS ======-->
 
