Fixed broken image import

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="assets/images/SHARE SPACE.png" alt="Share-space">
+                            <img src="assets/images/work/Share-Space.png" alt="Share-space">
 
                         </div>
                         <div class="col-md-8">
