--- a/index.html
+++ b/index.html
@@ -560,14 +560,14 @@
                 </div>
             </div> <!-- row -->
             <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 col-sm-7">
-                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded animate">
+                <div class="col-lg-4 col-md-6 col-sm-7 animate">
+                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded">
                         <div class="contact-icon">
                             <i class="lni lni-map"></i>
                         </div>
-                        <div class="contact-content">
-                            <h6 class="contact-title">Address</h6>
-                            <p>Mira road(East),Mumbai,Thane 401107</p>
+                        <div class="contact-content pb-25">
+                            <h6 class="contact-title">Location</h6>
+                            <p>Mumbai , India</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -582,17 +582,15 @@
                         </div>
                     </div> <!-- contact box -->
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-7">
-                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded animate">
+                <div class="col-lg-4 col-md-6 col-sm-7 animate">
+                    <div class="contact-box text-center mt-30 shadow-lg bg-white rounded">
                         <div class="contact-icon">
                             <i class="lni lni-envelope"></i>
                         </div>
-                        <div class="contact-content">
+                        <div class="contact-content pb-25">
                             <h6 class="contact-title">Email</h6>
                             <p><a href="mailto:parthpanchal53@gmail.com"
                                     style="color: #764ef9;">parthpanchal53@gmail.com</a></p>
-                            <p><a href="mailto:contactparth24@gmail.com"
-                                    style="color: #764ef9;">contactparth24@gmail.com</a></p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
