--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta https-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description"
+        content="My name is Parth Panchal and I am a Flutter Mobile App Developer and a MERN Stack Web Developer. I am open for Freelance/Internship opportunities. ">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name=”robots” content="index, follow">
 
     <!--====== Title ======-->
     <title>Parth Panchal - My Portfolio</title>
@@ -81,6 +83,7 @@
                                     <li class="nav-item active"><a class="page-scroll" href="#home">Home</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#work">Projects</a></li>
+                                    <li class="nav-item"><a class="page-scroll" href="#blogs">Blogs</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -121,8 +124,8 @@
             <div class="header-shape shape-ten layer" data-depth="0.30">
                 <img src="assets/images/banner/shape/shape-3.png" alt="Shape">
             </div> <!-- header shape -->
-            <div class="container">
-                <div class="row align-items-center">
+            <div class="container" div="intro-container">
+                <div class="row align-items-center ">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello 👋, I’m</h4>
@@ -138,7 +141,7 @@
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
-                    <div class="col-lg-6 offset-xl-1 ">
+                    <div class="col-lg-6 offset-xl-1">
                         <div class="d-none d-lg-block">
                             <img class="animate" src="assets/images/me.png" alt="hero"
                                 style="height : 80% ; width : 80%">
@@ -537,12 +540,69 @@
 
     <!--====== WORK PART ENDS ======-->
 
-    <!--====== PRICING PART START ======-->
-
-
-    <!--====== PRICING PART ENDS ======-->
-
     <!--====== BLOG PART START ======-->
+    <section id="blogs" class="work-area pt-125 pb-130">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="section-title pb-25">
+                        <h2 class="title">My Recent Blogs</h2>
+                        <p>I post blogs on Medium , mostly tutorial based related to Flutter , JavaScript , MERN stack
+                            etc
+                        </p>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+
+            <div class="row">
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="assets/images/blogs/blog_1.png" alt="Javascript Scope">
+
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a
+                                        href="https://medium.com/swlh/demystifying-scope-in-javascript-8fc2627b3925"
+                                        style="color: #764ef9;">Demystifying Scope in Javascript !</a></h5>
+                                <p class="card-text">Facing difficulty in understanding Scope in JavaScript ? This blog
+                                    describes in the simplest possible way different types of scopes in javascript .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="assets/images/blogs/blog_2.png" alt="Share-space">
+
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a
+                                        href="https://parthpanchal53.medium.com/flutter-firebase-firestore-crud-app-using-riverpod-981811e2a73d"
+                                        style="color: #764ef9;">Flutter-Firestore-Riverpod Demo</a></h5>
+                                <p class="card-text"> Get quickly started with integrating Firebase's Firestore with
+                                    Flutter App using the Riverpod provider for state management </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="work-more text-center mt-50">
+                        <a class="main-btn" href="https://parthpanchal53.medium.com/">More on Medium</a>
+                    </div> <!-- work more -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
 
 
     <!--====== BLOG PART ENDS ======-->
