Added freelance feedback

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#work">Projects</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#blogs">Blogs</a></li>
+                                    <li class="nav-item"><a class="page-scroll" href="#freelance">Freelance</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -538,7 +539,6 @@
         </div> <!-- container -->
     </section>
 
-    <!--====== WORK PART ENDS ======-->
 
     <!--====== BLOG PART START ======-->
     <section id="blogs" class="work-area pt-125 pb-130">
@@ -606,6 +606,31 @@
 
 
     <!--====== BLOG PART ENDS ======-->
+
+
+    <section id="freelance" class="work-area pt-125 pb-130">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="section-title pb-25">
+                        <h2 class="title">Freelancing Feedback</h2>
+                        <p>I do Freelancing on sites like <a
+                                href="https://www.upwork.com/o/profiles/users/~01e3aed2e4156eaadd/"
+                                target="blank">Upwork</a> and below is the feedback I received so far .
+
+                        </p>
+
+                    </div>
+
+                    <!-- section title -->
+                </div>
+                <div class="container-fluid text-center">
+                    <a href="https://www.upwork.com/fl/~01e3aed2e4156eaadd?wom=gfbli&crid=26151087"> <img
+                            src="assets/images/work/feedback.png" alt="client feedback" class="text-center"></a>
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
 
     <!--====== CONTACT PART START ======-->
 
