Added new project and github project links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta https-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description"
+    <meta name="Parth Panchal Portfolio"
         content="My name is Parth Panchal and I am a Flutter Mobile App Developer and a MERN Stack Web Developer. I am open for Freelance/Internship opportunities. ">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name=”robots” content="index, follow">
@@ -433,6 +433,26 @@
             </div> <!-- row -->
 
             <div class="row">
+
+                <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="assets/images/work/antariksh.png" alt="Code-snipps">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="https://antariksh.vercel.app"
+                                        style="color: #764ef9;">Antariksh 🚀 : A virtual space adventure</a></h5>
+                                <p class="card-text">Antariksh is a web app built with NextJS ,Tailwind CSS and NASA
+                                    API to fetch amazing data and information about the space .</p>
+                                <a href="https://github.com/parthpanchal123/antariksh" target="blank"
+                                    rel="noopener noreferrer" class="mt-2"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="card mb-3 shadow-sm bg-white rounded animate" style="max-width: 1000px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
@@ -446,6 +466,10 @@
                                 <p class="card-text">Code-snipps is a MERN stack web app that lets developers share cool
                                     code
                                     snippets with all other fellow developers.</p>
+                                <a href="https://github.com/parthpanchal123/Code-snipps" target="blank"
+                                    rel="noopener noreferrer" class="mt-2"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
 
                             </div>
                         </div>
@@ -465,6 +489,10 @@
                                     some interesting things to do in this quarantine like watching some film/series or
                                     reading an interesting book, listening to some good music or any other interesting
                                     activity .</p>
+                                <a href="https://github.com/parthpanchal123/Share-Space" target="blank"
+                                    rel="noopener noreferrer" class="mt-2"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
 
                             </div>
                         </div>
@@ -482,6 +510,10 @@
                                         style="color: #764ef9;">Hike-It Up !</a></h5>
                                 <p class="card-text">Hike-it Up is a simple application that allows you to share your
                                     location with your friends or family for a particular duration of time.</p>
+                                <a href="https://github.com/parthpanchal123/Hike-it-Up" target="blank"
+                                    rel="noopener noreferrer" class="mt-2"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
 
                             </div>
                         </div>
@@ -502,6 +534,10 @@
                                     number,email,github profile link or any other link , Cu-urls is the quick way.
 
                                 </p>
+                                <a href="https://github.com/parthpanchal123/Cu-urls" target="blank"
+                                    rel="noopener noreferrer" class="mt-2"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
 
                             </div>
                         </div>
@@ -519,6 +555,10 @@
                                         style="color: #764ef9;">Corona-Stats Tracker</a></h5>
                                 <p class="card-text">A simple app that displays corona-statistics from all over the
                                     world .</p>
+                                <a href="https://github.com/parthpanchal123/Corona-Stats" target="blank"
+                                    rel="noopener noreferrer" class="mb-0"
+                                    style="color: #3c03f5; text-decoration: underline">
+                                    Source code </a>
 
                             </div>
                         </div>
